--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,3 @@
 #config server key properties for microservice application
 dev_name=Sidhant Das
+spring.application.name=USER-SERVICE:${random.value}
