--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
 #config server key properties for microservice application
 dev_name=Sidhant Das
 spring.application.name=USER-SERVICE:${random.value}
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
