--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@
 dev_name=Sidhant Das
 spring.application.name=USER-SERVICE:${random.value}
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:8888
